--- a/package.json
+++ b/package.json
@@ -4,43 +4,60 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "build": "ng build --prod",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "ng test --coverage",
+    "test:watch": "ng test --watch",
+    "cypress": "run-p start cypress:open",
+    "cypress:open": "cypress open",
+    "format": "prettier --write \"./**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:fix": "pretty-quick --staged"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.6",
-    "@angular/common": "~10.0.6",
-    "@angular/compiler": "~10.0.6",
-    "@angular/core": "~10.0.6",
-    "@angular/forms": "~10.0.6",
-    "@angular/platform-browser": "~10.0.6",
-    "@angular/platform-browser-dynamic": "~10.0.6",
-    "@angular/router": "~10.0.6",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "10.0.8",
+    "@angular/common": "10.0.8",
+    "@angular/compiler": "10.0.8",
+    "@angular/core": "10.0.8",
+    "@angular/forms": "10.0.8",
+    "@angular/platform-browser-dynamic": "10.0.8",
+    "@angular/platform-browser": "10.0.8",
+    "@angular/router": "10.0.8",
+    "@froko/ng-essentials": "5.0.1",
+    "rxjs": "6.6.2",
+    "tslib": "2.0.0",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler-cli": "~10.0.6",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "@angular-builders/jest": "10.0.0",
+    "@angular-devkit/build-angular": "0.1000.5",
+    "@angular/cli": "10.0.5",
+    "@angular/compiler-cli": "10.0.8",
+    "@angular/language-service": "10.0.8",
+    "@cypress/webpack-preprocessor": "5.4.2",
+    "@ngneat/spectator": "5.13.0",
+    "@ngneat/until-destroy": "8.0.1",
+    "@types/jest": "26.0.8",
+    "@types/node": "12.12.6",
+    "codelyzer": "6.0.0",
+    "cypress": "4.12.0",
+    "husky": "4.2.5",
+    "jest-preset-angular": "8.2.1",
+    "jest": "26.2.2",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.0.5",
+    "pretty-quick": "2.0.1",
+    "ts-jest": "26.1.4",
+    "ts-loader": "5.3.3",
+    "ts-node": "8.10.2",
+    "tslint-angular": "3.0.2",
+    "tslint-config-prettier": "1.18.0",
+    "tslint": "6.1.3",
+    "typescript": "3.9.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "run-s format:fix lint"
+    }
   }
 }
